@@ -1,3 +1,8 @@
+Mon Mar 10 15:48:31 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>
+
+	* boot-9.scm (process-define-module): Modified to handle both
+	keywords and symbols.
+
 Sat Mar  8 04:32:44 1997  Gary Houston  <ghouston@actrix.gen.nz>
 
 	* slib.scm: update read usage.
